@@ -1,3 +1,8 @@
+2015-04-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* gnus-uu.el (gnus-uu-save-article):
+	Make the save-restriction/widen calls make more sense.
+
 2015-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-use-idna):
